--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,8 @@
   --color-white: hsl(0, 0%, 100%);
   --color-white-transparent: hsla(0, 0%, 100%, 0.75);
   --color-light-gray: hsl(0, 0%, 95%);
+  --color-black-transparent: hsla(0, 0%, 0%, 0.25);
+  --color-black-light: hsla(0, 0%, 0%, 0.7);
   --color-attributes: hsl(228, 45%, 44%);
 }
 
@@ -30,4 +32,161 @@ html {
 body {
   font-size: 1.5rem;
   color: var(--color-white);
+
+  width: 100vw;
+  min-height: 100vh;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 9fr 1fr;
+  align-items: center;
+  justify-items: center;
+}
+
+.container {
+  width: 70%;
+  height: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media only screen and (min-width: 90em) {
+    width: calc(1440px * 0.7);
+  }
+
+  @media only screen and (max-width: 75em) {
+    width: 90%;
+  }
+
+  @media only screen and (max-width: 56.25em) {
+    height: auto;
+  }
+
+  @media only screen and (max-width: 28.125em) {
+    width: 100%;
+  }
+}
+
+.card {
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: start;
+  justify-items: start;
+
+  border-radius: 1rem;
+  overflow: hidden;
+  margin: 2rem;
+
+  @media only screen and (max-width: 56.25em) {
+    width: 100%;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, min-content);
+  }
+
+  &-section {
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    padding: 5rem;
+
+    & > *:not(:last-child) {
+      margin-bottom: 4rem;
+    }
+
+    &--heading {
+      font-size: 4rem;
+      font-family: var(--font-secondary);
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      color: var(--color-light-gray);
+    }
+
+    &--description {
+      font-family: var(--font-primary);
+      letter-spacing: 0.5px;
+      line-height: 1.5;
+    }
+
+    &--button {
+      display: inline-block;
+      margin-top: auto;
+      text-decoration: none;
+      background-color: var(--color-light-gray);
+      padding: 1.5rem 3rem;
+      border-radius: 10rem;
+
+      @media only screen and (max-width: 28.125em) {
+        padding: 1rem 2rem;
+        font-size: 1.3rem;
+      }
+
+      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+      box-shadow: 0px 8px 16px 0px var(--color-black-transparent);
+
+      &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0px 8px 26px 0px var(--color-black-transparent);
+      }
+    }
+  }
+}
+
+.box {
+  &-1 {
+    background-color: var(--color-bright-orange);
+
+    & > a {
+      color: var(--color-bright-orange);
+    }
+  }
+
+  &-2 {
+    background-color: var(--color-dark-cyan);
+
+    & > a {
+      color: var(--color-dark-cyan);
+    }
+  }
+
+  &-3 {
+    background-color: var(--color-darker-cyan);
+
+    & > a {
+      color: var(--color-darker-cyan);
+    }
+  }
+}
+
+.attribution {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+
+  &-text {
+    color: var(--color-black-light);
+    letter-spacing: 0.5px;
+    text-align: center;
+
+    @media only screen and (max-width: 56.25em) {
+      font-size: 1.2rem;
+    }
+
+    & > a {
+      display: inline-block;
+      text-decoration: none;
+      color: var(--color-attributes);
+      font-weight: 700;
+
+      transition: transform 0.2s ease-out;
+
+      &:hover {
+        transform: translateY(-2px);
+      }
+    }
+  }
 }
